# subsocial-parachain

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .rustfmt.toml  COPYRIGHT  Cargo.toml  HEADER-GPL3  Makefile  README.md  RUSTC_VERSION  copyright.txt  rust-toolchain.toml  rustfmt.toml  types.json
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs  mock.rs
integration-tests/src/tests/: comments.rs  mod.rs  ownership.rs  posts.rs  profile_follows.rs  profiles.rs  reactions.rs  shared_post.rs  space_follows.rs  space_ownership.rs  spaces.rs
integration-tests/src/utils/: mod.rs  moderation_utils.rs  ownership_utils.rs  permissions_utils.rs  posts_utils.rs  profile_follows_utils.rs  profile_utils.rs  reactions_utils.rs  roles_utils.rs  space_follows_utils.rs  space_ownership_utils.rs  spaces_utils.rs
node/: Cargo.toml  build.rs
node/res/: soonsocial.json  soonsocialm.json  subsocial-kusama.json  subsocial-polkadot.json  subsocial.json  subsocialx.json
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/account-follows/: Cargo.toml
pallets/account-follows/rpc/: Cargo.toml
pallets/account-follows/rpc/runtime-api/: Cargo.toml
pallets/account-follows/rpc/src/: lib.rs
pallets/account-follows/src/: benchmarking.rs  lib.rs  mock.rs  rpc.rs  tests.rs  weights.rs
pallets/creator-staking/: Cargo.toml  README.md
pallets/creator-staking/rpc/: Cargo.toml
pallets/creator-staking/rpc/runtime-api/: Cargo.toml
pallets/creator-staking/rpc/src/: lib.rs
pallets/creator-staking/src/: functions.rs  inflation.rs  lib.rs  migration.rs  mock.rs  types.rs
pallets/creator-staking/src/tests/: mock.rs  mod.rs  testing_utils.rs  tests.rs  tests_lib.rs
pallets/creator-staking/src/types/: impls.rs  mod.rs
pallets/df-integration-tests/: Cargo.toml
pallets/df-integration-tests/src/: lib.rs
pallets/domains/: Cargo.toml  README.md
pallets/domains/rpc/: Cargo.toml
pallets/domains/rpc/runtime-api/: Cargo.toml
pallets/domains/rpc/src/: lib.rs
pallets/domains/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/energy/: Cargo.toml  README.md
pallets/energy/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/evm-addresses/: Cargo.toml
pallets/evm-addresses/src/: benchmarking.rs  eth_call.rs  evm.rs  lib.rs  mock.rs  test.rs  weights.rs
pallets/free-proxy/: Cargo.toml  README.md
pallets/free-proxy/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/influencer-staking/: Cargo.toml
pallets/influencer-staking/src/: lib.rs  types.rs
pallets/moderation/: Cargo.toml
pallets/moderation/src/: functions.rs  lib.rs  mock.rs  tests.rs
pallets/parachain-utils/: Cargo.toml
pallets/parachain-utils/src/: lib.rs  mock.rs  mock_functions.rs  tests.rs
pallets/permissions/: Cargo.toml  types.json
pallets/permissions/src/: default_permissions.rs  lib.rs  types.rs
pallets/post-follows/: Cargo.toml
pallets/post-follows/src/: benchmarking.rs  lib.rs  weights.rs
pallets/post-history/: Cargo.toml  types.json
pallets/post-history/src/: lib.rs
pallets/posts/: Cargo.toml  types.json
pallets/posts/rpc/: Cargo.toml
pallets/posts/rpc/runtime-api/: Cargo.toml
pallets/posts/rpc/src/: lib.rs
pallets/posts/src/: benchmarking.rs  functions.rs  lib.rs  rpc.rs  types.rs  weights.rs
pallets/posts/tests/: Cargo.toml
pallets/posts/tests/src/: comments_tests.rs  lib.rs  mock.rs  post_tests.rs  shared_posts_tests.rs  tests_utils.rs
pallets/profile-follows/: Cargo.toml
pallets/profile-follows/src/: lib.rs
pallets/profiles/: Cargo.toml  types.json
pallets/profiles/rpc/: Cargo.toml
pallets/profiles/rpc/runtime-api/: Cargo.toml
pallets/profiles/rpc/src/: lib.rs
pallets/profiles/src/: benchmarking.rs  lib.rs  mock.rs  rpc.rs  tests.rs  weights.rs
pallets/reactions/: Cargo.toml  types.json
pallets/reactions/rpc/: Cargo.toml
pallets/reactions/rpc/runtime-api/: Cargo.toml
pallets/reactions/rpc/src/: lib.rs
pallets/reactions/src/: benchmarking.rs  lib.rs  rpc.rs  weights.rs
pallets/reactions/tests/: Cargo.toml
pallets/reactions/tests/src/: lib.rs  mock.rs  tests.rs  tests_utils.rs
pallets/resource-discussions/: Cargo.toml
pallets/resource-discussions/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/roles/: Cargo.toml  types.json
pallets/roles/rpc/: Cargo.toml
pallets/roles/rpc/runtime-api/: Cargo.toml
pallets/roles/rpc/src/: lib.rs
pallets/roles/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  rpc.rs  tests.rs  types.rs  weights.rs
pallets/scores/: Cargo.toml  types.json
pallets/scores/src/: lib.rs
pallets/session-keys/: Cargo.toml  types.json
pallets/session-keys/src/: lib.rs
pallets/space-follows/: Cargo.toml
pallets/space-follows/rpc/: Cargo.toml
pallets/space-follows/rpc/runtime-api/: Cargo.toml
pallets/space-follows/rpc/src/: lib.rs
pallets/space-follows/src/: benchmarking.rs  lib.rs  rpc.rs  types.rs  weights.rs
pallets/space-follows/tests/: Cargo.toml
pallets/space-follows/tests/src/: lib.rs  mock.rs  tests.rs  (+1 more)
pallets/space-history/: Cargo.toml  types.json
pallets/space-history/src/: lib.rs
pallets/space-multi-ownership/: Cargo.toml  README.md  types.json
pallets/space-multi-ownership/src/: functions.rs  lib.rs  tests.rs
pallets/space-ownership/: Cargo.toml
pallets/space-ownership/src/: benchmarking.rs  lib.rs  migration.rs  weights.rs
pallets/space-ownership/tests/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/kusocial-runtime/: Cargo.toml
runtime/kusocial-runtime/src/: constants.rs  lib.rs
runtime/src/: constants.rs  impls.rs  lib.rs  xcm_config.rs
runtime/src/governance/: mod.rs
runtime/src/weights/: block_weights.rs  extrinsic_weights.rs  mod.rs  pallet_xcm.rs  paritydb_weights.rs  rocksdb_weights.rs
runtime/subsocial-common/: Cargo.toml
runtime/subsocial-common/src/: impls.rs
runtime/westsocial-runtime/: Cargo.toml
runtime/westsocial-runtime/src/: constants.rs  lib.rs
(+155 files in other folders)
