[profile.release]
panic = "unwind"
opt-level = 3

[profile.dev]
split-debuginfo = "unpacked"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.dev.package]
libsecp256k1 = { opt-level = 3 }

[workspace]
#resolver = "2"
members = [
#    "integration-tests",
    "node",
    "runtime",
    "pallets/*",
    "pallets/*/tests",
]
