[package]
name = 'integration-tests'
version = '0.1.5'
authors = ['DappForce <dappforce@pm.me>']
edition = '2021'
license = 'GPL-3.0-only'
homepage = 'https://subsocial.network'
repository = 'https://github.com/dappforce/subsocial-parachain'
description = 'Integration tests'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[features]
default = ['std']
std = [
    'codec/std',
    'scale-info/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'pallet-balances/std',
    'pallet-timestamp/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-permissions/std',
    'pallet-posts/std',
    'pallet-profiles/std',
    'pallet-reactions/std',
    'pallet-roles/std',
    'pallet-space-follows/std',
    'pallet-space-ownership/std',
    'pallet-spaces/std',
    'pallet-parachain-utils/std',
    'df-traits/std',
]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { features = ['derive'], optional = true, version = '1.0.132' }

frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19', default-features = false }

[dev-dependencies]
pallet-permissions = { default-features = false, path = '../pallets/permissions' }
pallet-posts = { default-features = false, path = '../pallets/posts' }
pallet-profiles = { default-features = false, path = '../pallets/profiles' }
pallet-reactions = { default-features = false, path = '../pallets/reactions' }
pallet-roles = { default-features = false, path = '../pallets/roles' }
pallet-space-follows = { default-features = false, path = '../pallets/space-follows' }
pallet-space-ownership = { default-features = false, path = '../pallets/space-ownership' }
pallet-spaces = { default-features = false, path = '../pallets/spaces' }
pallet-parachain-utils = { default-features = false, path = '../pallets/parachain-utils' }
df-traits = { default-features = false, path = '../pallets/traits' }

sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19', default-features = false }
